--- a/server/auth/data/config.json
+++ b/server/auth/data/config.json
@@ -18,7 +18,7 @@
             "mongo": {
                 "host": "127.0.0.1",
                 "port": 27017,
-                "db": "ioh-auth-db"
+                "dbMain": "ioh-auth-db"
             }            
         }
     },
@@ -41,7 +41,7 @@
             "mongo": {
                 "host": "127.0.0.1",
                 "port": 27023,
-                "db": "ioh-auth-db"
+                "dbMain": "ioh-auth-db"
             }            
         }
     }
