--- a/server/api/package.json
+++ b/server/api/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "nconf": "^0.10.0"
   }
