--- a/server/auth/package.json
+++ b/server/auth/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
+    "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "nconf": "^0.10.0"
   }
