--- a/server/auth/package.json
+++ b/server/auth/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "uuid": "^3.3.2"
   }
 }
