--- a/server/auth/data/config.json
+++ b/server/auth/data/config.json
@@ -7,9 +7,9 @@
             "http": {
                 "jsonLimit": "5mb",
                 "cors": {
-                    "allowOrigin": "*",
-                    "allowMethods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
-                    "allowHeaders": "Cache-Control,Content-Type,Authorization,Content-Length",
+                    "origin": "*", 
+                    "methods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
+                    "headers": "Cache-Control,Content-Type,Authorization,Content-Length",
                     "maxAge": "1000"
                 }
             }
@@ -30,9 +30,9 @@
             "http": {
                 "jsonLimit": "5mb",
                 "cors": {
-                    "allowOrigin": "*",
-                    "allowMethods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
-                    "allowHeaders": "Cache-Control,Content-Type,Authorization,Content-Length",
+                    "origin": "*",
+                    "methods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
+                    "headers": "Cache-Control,Content-Type,Authorization,Content-Length",
                     "maxAge": "1000"
                 }
             }
