--- a/server/proxy/package.json
+++ b/server/proxy/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "http-proxy": "^1.17.0",
