--- a/server/api/data/config.json
+++ b/server/api/data/config.json
@@ -6,9 +6,9 @@
             "http": {
                 "jsonLimit": "100mb",
                 "cors": {
-                    "allowOrigin": "*",
-                    "allowMethods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
-                    "allowHeaders": "Cache-Control,Content-Type,Authorization,Content-Length",
+                    "origin": "*",
+                    "methods": "GET,POST,PUT,DELETE,OPTIONS,PATCH",
+                    "headers": "Cache-Control,Content-Type,Authorization,Content-Length",
                     "maxAge": "1000"
                 }
             }
