--- a/server/proxy/package.json
+++ b/server/proxy/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "http-proxy": "^1.17.0",
     "morgan": "^1.9.1",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "request": "^2.88.0"
   }
 }
