--- a/server/api/package.json
+++ b/server/api/package.json
@@ -17,6 +17,7 @@
     "helmet": "^3.15.0",
     "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "uuid": "^3.3.2"
   }
 }
