--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
+    "@ionic/angular": "^4.0.0-beta.15",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "8.0.0",
