--- a/servers/api/package.json
+++ b/servers/api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "preinstall": "node helpers/counter.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
